--- a/doc/source/sections/soccon.tex
+++ b/doc/source/sections/soccon.tex
@@ -2,7 +2,7 @@
 \subsection{SoC Control}\label{sec:per_control}
 The SoC control peripheral implements functions for controlling the SoC and system as a whole, as well as controlling system interrupts.
 
-It allows software- or UART-initiated resets of the core and SoC, allows the core to be halted, and allows detailed control over interrupts (enabling/disabling interrupts globally, enabling/disabling individual interrupts, reading interrupt status, clearing individual interrupts).
+It provides system information, allows software- or UART-initiated resets of the core and SoC, allows the core to be halted, and allows detailed control over interrupts (enabling/disabling interrupts globally, enabling/disabling individual interrupts, reading interrupt status, clearing individual interrupts).
 
 Additionally, a 16 bit core control flag signal is provided (see \ttt{control\_flags} in Section \ref{sec:socinterface}). These flags may have a user-defined meaning and can also be read or written using the memory bus. Unlike most registers, these flags are \textit{not} affected by system resets, retaining their state.\\
 For the bootloader code and UART programming utilities provided with EduSoC, only one of these flags (flag 0) has a meaning by default - it serves as an indicator that a program has been loaded into RAM. See Appendix \ref{sec:basic} for more information.
@@ -14,12 +14,14 @@ This peripheral has the following registers:\\
         Address & Name & Reset Value \\\hline\hline
         \ttt{0x1B000000} & \ttt{SOCCON\_CONTROL} & \ttt{0x00000008}\footnotemark[1] \\
         \ttt{0x1B000010} & \ttt{SOCCON\_INT\_EN} & \ttt{0x00000000} \\
-        \ttt{0x1B000020} & \ttt{SOCCON\_INT\_FLAGS} & \ttt{0x00000000} \\\hline
+        \ttt{0x1B000020} & \ttt{SOCCON\_INT\_FLAGS} & \ttt{0x00000000} \\
+        \ttt{0x1B000030} & \ttt{SOCCON\_CLK\_FREQ} & \ttt{0x017D7840}\footnotemark[2] \\\hline
     \end{tabular}
     \caption{SoC Control Registers}
     \label{tab:soccon_regs}
 \end{table}
 \footnotetext[1]{Upper 16 bits are initially 0x0000, but retain their values during further resets.}
+\footnotetext[2]{Assuming default clock frequency of 25 MHz.}
 
 \subsubsection{\ttt{SOCCON\_CONTROL} Register}
 \vspace{-3mm}
@@ -134,3 +136,37 @@ Reset value: \ttt{0x00000000}\\[-1mm]
 Each bit corresponds to one interrupt ID, e.\,g. bit 0 corresponds to interrupt ID 0.
 
 Flags/bits in this register may be cleared (set to 0) using memory writes, which will clear the corresponding interrupts and stop them from being asserted until they reoccur. Attempting to set bits to 1 using memory writes will have no effect.
+
+\vspace{-3mm}
+\subsubsection{\ttt{SOCCON\_CLK\_FREQ} Register}
+\vspace{-3mm}
+Address: \ttt{0x1B000030}\hfill
+Reset value: \ttt{0x017D7840}\\[-1mm]
+\begin{table}[H]
+    \centering
+    \renewcommand{\arraystretch}{1.1}
+    \renewcommand{\extrarowheight}{-1.5mm}
+    \begin{tabular}{|c||B|B|B|B|B|B|B|>{\arraybackslash}B|}\hline
+        \rule{0pt}{12pt}Bit Range & \multicolumn{8}{c|}{Bits (highest to lowest)} \\\hline\hline
+        \br{31:24} & \bd{R-0} & \bd{R-0} & \bd{R-0} & \bd{R-0} & \bd{R-0} & \bd{R-0} & \bd{R-0} & \bd{R-1} \\\cline{2-9}
+        \rule{0pt}{12pt} & \multicolumn{8}{c|}{\ttt{CLK\_FREQ}[31:24]} \\\hline
+        \br{23:16} & \bd{R-0} & \bd{R-1} & \bd{R-1} & \bd{R-1} & \bd{R-1} & \bd{R-1} & \bd{R-0} & \bd{R-1} \\\cline{2-9}
+        \rule{0pt}{12pt} & \multicolumn{8}{c|}{\ttt{CLK\_FREQ}[23:16]} \\\hline
+        \br{15:8} & \bd{R-0} & \bd{R-1} & \bd{R-1} & \bd{R-1} & \bd{R-1} & \bd{R-0} & \bd{R-0} & \bd{R-0} \\\cline{2-9}
+        \rule{0pt}{12pt} & \multicolumn{8}{c|}{\ttt{CLK\_FREQ}[15:8]} \\\hline
+        \br{7:0} & \bd{R-0} & \bd{R-1} & \bd{R-0} & \bd{R-0} & \bd{R-0} & \bd{R-0} & \bd{R-0} & \bd{R-0} \\\cline{2-9}
+        \rule{0pt}{12pt} & \multicolumn{8}{c|}{\ttt{CLK\_FREQ}[7:0]} \\\hline
+        \multicolumn{9}{c}{} \\\hline
+        \multicolumn{2}{|l}{\rule{0pt}{10pt}\footnotesize\textbf{Legend:}} & \multicolumn{2}{l}{\footnotesize R = Readable} & \multicolumn{2}{l}{\footnotesize W = Writable} & \multicolumn{3}{l|}{\footnotesize U = Unimplemented, read as 0} \\
+        \multicolumn{2}{|l}{\rule{0pt}{10pt}\footnotesize -n = Initial Value} & \multicolumn{2}{l}{\footnotesize 1 = Set} & \multicolumn{2}{l}{\footnotesize 0 = Cleared} & \multicolumn{3}{l|}{\footnotesize x = Unknown} \\\hline
+    \end{tabular}
+    \renewcommand{\arraystretch}{1}
+    \renewcommand{\extrarowheight}{0mm}
+\end{table}
+\vspace{-2mm}
+\begin{itemize}[leftmargin=18mm,labelsep=3mm,parsep=1.5mm]
+    \item[\footnotesize Bit 31-0] \ttt{CLK\_FREQ}: System clock frequency in Hz.
+\end{itemize}\largepage
+This register is constant and allows software to determine the system clock frequency. The values given above assume the default configuration with a 25 MHz clock frequency, and will be different if the SoC is configured for a different clock frequency (see Section \ref{sec:config}).
+
+This register is read-only, attempting to write to it will have no effect.
